--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,21 @@
-# Common settings that generally should always be used with your language specific settings
-# A combination from https://github.com/gitattributes/gitattributes
-# We normalize the repo line endings to LF and backstop with .editorconfig
+## Set Git attributes for paths including line ending
+## normalization, diff behavior, etc.
+##
+## Get latest from `dotnet new gitattributes`
 
 # Auto detect text files and perform LF normalization
-*          text=auto eol=lf encoding=UTF-8
+* text=auto
 
 #
 # The above will handle all files NOT found below
 #
+
+*.cs     text diff=csharp
+*.cshtml text diff=html
+*.csx    text diff=csharp
+*.sln    text eol=crlf
+
+# Content below from: https://github.com/gitattributes/gitattributes/blob/master/Common.gitattributes
 
 # Documents
 *.bibtex   text diff=bibtex
@@ -27,7 +35,8 @@
 *.adoc     text
 *.textile  text
 *.mustache text
-*.csv      text
+# Per RFC 4180, .csv should be CRLF
+*.csv      text eol=crlf
 *.tab      text
 *.tsv      text
 *.txt      text
@@ -50,17 +59,18 @@
 *.eps      binary
 
 # Scripts
-*.bash     text
-*.fish     text
-*.sh       text
-*.zsh      text
+# Force Unix scripts to always use lf line endings so that if a repo is accessed
+# in Unix via a file share from Windows, the scripts will work
+*.bash     text eol=lf
+*.fish     text eol=lf
+*.ksh      text eol=lf
+*.sh       text eol=lf
+*.zsh      text eol=lf
+# Likewise, force cmd and batch scripts to always use crlf
+*.bat      text eol=crlf
+*.cmd      text eol=crlf
 
-# These are explicitly windows files and could use crlf, but all the tools support lf
-*.bat      text
-*.cmd      text
-
-
-# Serialisation
+# Serialization
 *.json     text
 *.toml     text
 *.xml      text
@@ -69,45 +79,37 @@
 
 # Archives
 *.7z       binary
+*.bz       binary
+*.bz2      binary
+*.bzip2    binary
 *.gz       binary
+*.lz       binary
+*.lzma     binary
+*.rar      binary
 *.tar      binary
+*.taz      binary
+*.tbz      binary
+*.tbz2     binary
 *.tgz      binary
+*.tlz      binary
+*.txz      binary
+*.xz       binary
+*.Z        binary
 *.zip      binary
+*.zst      binary
 
 # Text files where line endings should be preserved
 *.patch    -text
 
-#
 # Exclude files from exporting
-#
-
 .gitattributes export-ignore
 .gitignore     export-ignore
 .gitkeep       export-ignore
-
-# CSharp files
-*.cs       text diff=csharp
-*.cshtml   text diff=html
-*.csx      text diff=csharp
-*.sln      text
-*.csproj   text
 
 # See https://github.com/VerifyTests/Verify?tab=readme-ov-file#text-file-settings
 *.verified.txt  text eol=lf working-tree-encoding=UTF-8
 *.verified.xml  text eol=lf working-tree-encoding=UTF-8
 *.verified.json text eol=lf working-tree-encoding=UTF-8
 
-# Basic .gitattributes for a PowerShell repo.
-
-# Source files
-# ============
-*.ps1      text
-*.ps1x     text
-*.psm1     text
-*.psd1     text
-*.ps1xml   text
-*.pssc     text
-*.psrc     text
-*.cdxml    text
 # Fix syntax highlighting on GitHub to allow comments
 .vscode/*.json linguist-language=JSON-with-Comments
